[package]
name = "lightning-probing"
version = "0.1.0"
edition = "2021"
author = "Nitesh Balusu <niteshbalusu@protonmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
hex = "0.4.3"
lnd_grpc_rust = "2.3.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = {version = "1.32.0", features = ['full']}

